projects/InfraAndDevops/D4/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: d4-notify
  labels:
    app.kubernetes.io/name: d4-notify
    app.kubernetes.io/part-of: infra-devops-d4
